added optinal in properties